<resources>
    <string name="app_name">TheApp</string>
    <string name="action_settings">Settings</string>

    <string name="default_notification_channel_id">DEFAULT_NOTIFICATION_CHANNEL_ID</string>
    <string name="fcm_channel_description">DEFAULT_NOTIFICATION_CHANNEL_DESCRIPTION</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="text_validation_success">success</string>
    <string name="text_validation_error_email">Enter Valid Email</string>
    <string name="text_validation_error_empty_field">Enter all fields</string>
    <string name="text_validation_error_min_pass_length">Your password is minimum</string>
    <string name="text_validation_error_max_pass_length">You have entered maximum limit</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Mobile Number</string>
    <string name="id_number">ID Number</string>
    <string name="condition">By registering for CreditScore you agree to the\n Terms and Condition as set out in the application </string>
    <string name="sign_up">Sign Up</string>
    <string name="grow_your_business">Grow Your Business</string>
    <string name="register">Register</string>
    <string name="phone_number_prefix">254</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="email_or_mobile_number">Email or Mobile Number</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm">Confirm</string>
    <string name="email">Email</string>
    <string name="continue_btn">Continue</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="pin">Pin</string>
    <string name="transfer_header">Here are some things you can do</string>
    <string name="amount">1,200.00</string>
    <string name="hi_name">Hi$Stephen </string>
    <string name="current_balance">Current Balance</string>
    <string name="create_account">Create Account</string>
    <string name="request_money">Request Money</string>
    <string name="request_money_from_thesacco">Request money from TheSacco</string>
    <string name="pay_someone">Pay Someone</string>
    <string name="to_wallet_bank_or_mobile_number">To wallet,bank or Mobile Number</string>
    <string name="buy_artime">Buy airtime</string>
    <string name="top_up_or_send_artime_across">Top-up or send artime across</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="buy_goods">Buy goods</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_pin">Create Pin</string>
    <string name="content_description_accelerator">content_description_accelerator</string>
    <string name="transact">Transact</string>
    <string name="loan">Loan</string>
    <string name="home">Home</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="to_bank">To Bank</string>
    <string name="to_mpesa">To Mpesa</string>
    <string name="tkash">To TKash</string>
    <string name="repay_loan">Repay Loan</string>
    <string name="request_loan">Request Loan</string>
    <string name="check_loan_limit">Loan Limit</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="current_pin">Current Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_new_pin">Confirm new Pin</string>
    <string name="_9">9</string>
    <string name="form_username">form_username</string>
    <string name="currency">KSH</string>
    <string name="pay_with_sacco">Pay With Sacco</string>
    <string name="airtelmoney">To Artel Money</string>
    <string name="sacco_transfer">Sacco Transfer</string>
    <string name="sacco_transfer_hint">Send to Sacco Account</string>
    <string name="statements">Statement</string>
    <string name="expense">Expenses</string>
    <string name="income">Income</string>
</resources>