<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/HomeFragment"
        android:icon="@drawable/home"
        android:title="@string/home"
        android:contentDescription="@string/content_description_accelerator"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/LoanFragment"
        android:icon="@drawable/ic_loan"
        android:title="@string/loan"
        android:contentDescription="@string/content_description_accelerator"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/transactionFragment"
        android:icon="@drawable/account_balance_wallet"
        android:title="@string/transact"
        android:contentDescription="@string/content_description_accelerator"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/AccountFragment"
        android:icon="@drawable/account_balance_wallet"
        android:title="Account"
        android:contentDescription="@string/content_description_accelerator"
        app:showAsAction="ifRoom"/>


</menu>