<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature_auth.presentation.fragment.auth.AuthFragment">

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/credit_score"
        android:contentDescription="@string/statements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <View
        android:layout_width="match_parent"
        android:background="#7A00000"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:padding="12dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/sign_in"
        android:layout_marginBottom="20dp"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpBtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_regular"
        android:minHeight="48dp"
        android:padding="12dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>